[#22] chore: List.getFirst()에서 get(0)로 수정